--- a/package.json
+++ b/package.json
@@ -7,14 +7,12 @@
     "build": "next build --turbopack",
     "start": "next start"
   },
-  
   "dependencies": {
     "lucide-react": "^0.548.0",
-    "next": "15.5.4",
-    "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "next": "^16.1.1",
+    "react": "^19.2.3",
+    "react-dom": "^19.2.3"
   },
-
   "devDependencies": {
     "@tailwindcss/postcss": "^4",
     "@types/node": "^20",
